po: update po/de_DE/install.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/install.po
+++ b/po/de_DE/install.po
@@ -3,20 +3,21 @@
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
 # Translators:
+# Benny Doe <s71664@htw-dresden.de>, 2016
 # Ettore Atalan <atalanttore@googlemail.com>, 2015
 # Martin Peth <peth@systopia.de>, 2015
 # metalmatze <matthias.hahn@web.de>, 2014
 # heliogabal <rhalbmann@gmail.com>, 2014
-# Sebastian Huter <sebastian.huter@gmail.com>, 2015
+# Sebastian Huter <inactive+sebastian.huter@transifex.com>, 2015
 # TorstenL <t.lachnitt@web.de>, 2014
 # luckow <transifex@luckow.org>, 2014
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-04-25 16:58-0400\n"
-"PO-Revision-Date: 2015-06-19 11:05+0000\n"
-"Last-Translator: Martin Peth <peth@systopia.de>\n"
-"Language-Team: German (http://www.transifex.com/projects/p/civicrm/language/de/)\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 16:48+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -56,25 +57,25 @@ msgstr ""
 
 #: install/index.php
 msgid "Oops! Incorrect CiviCRM version"
-msgstr ""
+msgstr "Ooops! Nicht die richtige CiviCRM Version"
 
 #: install/index.php
 msgid "This installer can only be used for the Drupal version of CiviCRM."
-msgstr ""
+msgstr "Dieser Installer kann nur for die Drupal Version von CiviCRM benutzt werden."
 
 #: install/index.php
 msgid "Oops! Incorrect Drupal version"
-msgstr ""
+msgstr "Ooops! Nicht die richtige Drupal Version"
 
 #: install/index.php
 msgid ""
 "This version of CiviCRM can only be used with Drupal 6.x or 7.x. Please "
 "ensure that '%1' exists if you are running Drupal 7.0 and over."
-msgstr ""
+msgstr "Diese Version von CiviCRM kann nur mit Drupal 6.x oder 7.x verwendet werden. Bitte stellen Sie sicher, dass '%1' existiert, wenn Sie Drupal 7.0 oder neuer verwenden."
 
 #: install/index.php
 msgid "This installer can only be used for the WordPress version of CiviCRM."
-msgstr ""
+msgstr "Dieser Installer kann nur for die Wordpress Version von CiviCRM verwendet werden."
 
 #: install/index.php
 msgid "PHP Configuration"
@@ -98,7 +99,7 @@ msgstr "Existiert der Server?"
 
 #: install/index.php
 msgid "Can't find the a MySQL server on '%1'."
-msgstr ""
+msgstr "Kann keinen MySQL Server auf '%1' finden"
 
 #: install/index.php
 msgid "Are the access credentials correct?"
@@ -114,72 +115,82 @@ msgstr "Die MySQL-Version muß mindestens %1 sein."
 
 #: install/index.php
 msgid "MySQL version %1 or higher is required, you are running MySQL %2."
-msgstr ""
+msgstr "MySQL Version %1 oder neuer wird benötigt, Sie verwenden MySQL %2"
 
 #: install/index.php
 msgid "MySQL %1"
-msgstr ""
+msgstr "MySQL %1"
 
 #: install/index.php
 msgid "Is auto_increment_increment set to 1"
-msgstr ""
+msgstr "Ist auto_increment_increment auf 1 gesetzt"
 
 #: install/index.php
 msgid ""
 "An auto_increment_increment value greater than 1 is not currently supported."
 " Please see issue CRM-7923 for further details and potential workaround."
+msgstr "Ein auto_increment_increment Wert größer als 1 wird derzeit nicht unterstützt. Bitte lesen Sie CRM-7923 für weitere Informationen und mögliche Workarounds."
+
+#: install/index.php
+msgid "Is the provided database name valid?"
+msgstr ""
+
+#: install/index.php
+msgid ""
+"The database name provided is not valid. Please use only 0-9, a-z, A-Z and _"
+" as characters in the name."
 msgstr ""
 
 #: install/index.php
 msgid "Does MySQL thread_stack meet minimum (%1k)"
-msgstr ""
+msgstr "Erfüllt MySQL thread_stack das Minimum (%1k)"
 
 #: install/index.php
 msgid "Can I access/create the database?"
-msgstr ""
+msgstr "Kann ich die Datenbank erzeugen/auf die Datenbank zugreifen?"
 
 #: install/index.php
 msgid "I can't create new databases and the database '%1' doesn't exist."
-msgstr ""
+msgstr "Ich kann keine neuen Datenbanken erzeugen und die Datenbank '%1' existiert nicht."
 
 #: install/index.php
 msgid "Can I access/create InnoDB tables in the database?"
-msgstr ""
+msgstr "Kann ich in dieser Datenbank auf InnoDB Tabellen zugreifen/InnoDB Tabellen erzeugen?"
 
 #: install/index.php
 msgid ""
 "Unable to create InnoDB tables. MySQL InnoDB support is required for CiviCRM"
 " but is either not available or not enabled in this MySQL database server."
-msgstr ""
+msgstr "InnoDB Tabellen konnten nicht angelegt werden. MySQL InnoDB Unterstützung wird für CiviCRM benötigt aber ist auf diesem MySQL Datenbank Server entweder nicht verfügbar oder nicht aktiviert"
 
 #: install/index.php
 msgid "Can I create temporary tables in the database?"
-msgstr ""
+msgstr "Kann ich temporäre Tabellen in dieser Datenbank anlegen?"
 
 #: install/index.php
 msgid ""
 "Unable to create temporary tables. This MySQL user is missing the CREATE "
 "TEMPORARY TABLES privilege."
-msgstr ""
+msgstr "Temporäre Tabellen konnten nicht angelegt werden. Dieser MySQL Benutzer besitzt keine CREATE TEMPORARY TABLES Berechtigung."
 
 #: install/index.php
 msgid "Can I create lock tables in the database?"
-msgstr ""
+msgstr "Kann ich Tabellen in dieser Datenbank sperren?"
 
 #: install/index.php
 msgid ""
 "Unable to lock tables. This MySQL user is missing the LOCK TABLES privilege."
-msgstr ""
+msgstr "Tabellen konnten nicht gesperrt werden. Dieser MySQL Benutzer besitzt keine LOCK TABLES Berechtigung."
 
 #: install/index.php
 msgid "Can I create triggers in the database?"
-msgstr ""
+msgstr "Kann ich Trigger in dieser Datenbank erzeugen?"
 
 #: install/index.php
 msgid ""
 "Unable to create triggers. This MySQL user is missing the CREATE TRIGGERS  "
 "privilege."
-msgstr ""
+msgstr "Trigger konnten nicht erzeugt werden. Dieser MySQL Benutzer besitzt keine CREATE TRIGGERS Berechtigung."
 
 #: install/index.php
 msgid "PHP5 installed"
@@ -207,7 +218,7 @@ msgstr "Beinhaltet der CiviCRM Pfad PATH_SEPARATOR?"
 
 #: install/index.php
 msgid "The path %1 contains PATH_SEPARATOR (the %2 character)."
-msgstr ""
+msgstr "Der Pfad %1 enthält PATH_SEPARATOR (das %2 Zeichen)"
 
 #: install/index.php
 msgid "Folder '%1' exists?"
@@ -227,17 +238,17 @@ msgstr "Ich kann nicht ermitteln, welchen Webserver Sie verwenden."
 
 #: install/index.php
 msgid "Webserver config"
-msgstr ""
+msgstr "Webserver Konfiguration"
 
 #: install/index.php
 msgid "Recognised webserver"
-msgstr ""
+msgstr "Erkannter Webserver"
 
 #: install/index.php
 msgid ""
 "You seem to be using an unsupported webserver. The server variables "
 "SCRIPT_NAME, HTTP_HOST, SCRIPT_FILENAME need to be set."
-msgstr ""
+msgstr "Sie scheinen einen Webserver zu verwenden, der nicht unterstützt wird. Die Server Variablen SCRIPT_NAME, HTTP_HOST, SCRIPT_FILENAME müssen gesetzt sein."
 
 #: install/index.php
 msgid "JSON support"
@@ -249,14 +260,14 @@ msgstr "JSON Support ist nicht in PHP enthalten."
 
 #: install/index.php
 msgid "XCache compatibility"
-msgstr ""
+msgstr "XCache Kompatibilität"
 
 #: install/index.php
 msgid ""
 "XCache is installed and there are known compatibility issues between XCache "
 "and CiviCRM. Consider using an alternative PHP caching mechanism or disable "
 "PHP caching altogether."
-msgstr ""
+msgstr "XCache ist installiert und es existieren bekannte Kompatibilitätsprobleme zwischen XCache und CiviCRM. Ziehen Sie in Betracht, einen anderen Caching-Mechanismus zu verwenden oder PHP Caching komplett zu deaktivieren."
 
 #: install/index.php
 msgid "Memory allocated (PHP config option 'memory_limit')"
@@ -265,17 +276,17 @@ msgstr "Speicherreservierung (PHP config option 'memory_limit')"
 #: install/index.php
 msgid ""
 "CiviCRM needs a minimum of %1 MB allocated to PHP, but recommends %2 MB."
-msgstr ""
+msgstr "CiviCRM benötigt mindestens %1 MB für PHP zugewiesen, es werden jedoch %2 MB empfohlen."
 
 #: install/index.php
 msgid "You only have %1 allocated"
-msgstr ""
+msgstr "Sie haben nur %1 zugewiesen"
 
 #: install/index.php
 msgid ""
 "We can't determine how much memory you have allocated. Install only if "
 "you're sure you've allocated at least %1 MB."
-msgstr ""
+msgstr "Wir konnten nicht feststellen, wieviel Speicher Sie zugewiesen haben. Setzen Sie die Installation nur fort, wenn Sie sicher sind, mindestens %1 MB zugewiesen haben."
 
 #: install/index.php
 msgid "The following problems are preventing me from installing CiviCRM:"
@@ -285,33 +296,33 @@ msgstr "Die folgenden Probleme verhindern die Installation von CiviCRM:"
 msgid ""
 "You need PHP version %1 or later, only %2 is installed. Please upgrade your "
 "server, or ask your web-host to do so."
-msgstr ""
+msgstr "Sie benötigen PHP Version %1 oder neuer, es ist nur %2 installiert. Bitte führen Sie ein Server-Upgrade durch oder bitten Sie Ihren Web-Hoster darum."
 
 #: install/index.php
 msgid ""
 "PHP version %1 is not supported. PHP version earlier than %2 is required. "
 "You might want to downgrade your server, or ask your web-host to do so."
-msgstr ""
+msgstr "PHP Version %1 wird nicht unterstützt. Eine PHP Version älter als %2 wird benötigt. Möglicherweise möchten Sie ein Server-Downgrade durchführen oder Ihren Web-Hoster darum bitten."
 
 #: install/index.php
 msgid "file '%1' not found"
-msgstr ""
+msgstr "Datei '%1' nicht gefunden"
 
 #: install/index.php
 msgid "file '%1' found"
-msgstr ""
+msgstr "Datei '%1' gefunden"
 
 #: install/index.php
 msgid ""
 "The user account used by your web-server %1 needs to be granted write access"
 " to the following directory in order to configure the CiviCRM settings file:"
-msgstr ""
+msgstr "Dem Benutzer-Konto, das von Ihrem Web-Server %1 verwendet wird, muss Schreibzugriff auf das folgende Verzeichnis gewährt werden, um die CiviCRM Einstellungsdatei zu konfigurieren."
 
 #: install/index.php
 msgid ""
 "Cannot determine the version of MySQL installed. Please ensure at least "
 "version %1 is installed."
-msgstr ""
+msgstr "Die MySQL Version konnte nicht ermittelt werden. Bitte stellen Sie sicher, dass mindestens Version %1 installiert ist."
 
 #: install/index.php
 msgid "Could not determine if MySQL has InnoDB support. Assuming no."
@@ -319,11 +330,11 @@ msgstr "Es konnte nicht festgestellt werden, ob MySQL InnoDB unterstützt. Es wi
 
 #: install/index.php
 msgid "MySQL server does have InnoDB support"
-msgstr ""
+msgstr "MySQL Server besitzt InnoDB Unterstützung"
 
 #: install/index.php
 msgid "Could not determine if MySQL has InnoDB support. Assuming no"
-msgstr ""
+msgstr "Es konnte nicht ermittelt werden, ob MySQL InnoDB Unterstützung besitzt. Es wird von Nein ausgegangen"
 
 #: install/index.php
 msgid "Could not login to the database."
@@ -331,59 +342,59 @@ msgstr ""
 
 #: install/index.php
 msgid "Could not select the database."
-msgstr ""
+msgstr "Datenbank konnte nicht ausgewählt werden."
 
 #: install/index.php
 msgid "Could not create a temp table."
-msgstr ""
+msgstr "Temporäre Tabelle konnte nicht angelegt werden."
 
 #: install/index.php
 msgid "Could not create a table in the database."
-msgstr ""
+msgstr "Datenbank Tabelle konnte nicht angelegt werden."
 
 #: install/index.php
 msgid "Could not create a database trigger."
-msgstr ""
+msgstr "Datenbanktrigger konnte nicht erzeugt werden."
 
 #: install/index.php
 msgid "Could not connect to the database server."
-msgstr ""
+msgstr "Es konnte keine Verbindung zum Datenbank Server hergestellt werden."
 
 #: install/index.php
 msgid "Could not obtain a write lock for the database table."
-msgstr ""
+msgstr "Die Schreibzugriffssperre für die Datenbank konnte nicht gesetzt werden"
 
 #: install/index.php
 msgid "Could not release the lock for the database table."
-msgstr ""
+msgstr "Die Datenbanksperre konnte nicht aufgehoben werden."
 
 #: install/index.php
 msgid "Could not query database server variables."
-msgstr ""
+msgstr "Datenbank Server Variablen konnten nicht abgefragt werden."
 
 #: install/index.php
 msgid "MySQL server auto_increment_increment is 1"
-msgstr ""
+msgstr "MySQL Server auto_increment_increment ist 1"
 
 #: install/index.php
 msgid "Could not get information about the thread_stack of the database."
-msgstr ""
+msgstr "Es konnten keine Informationen über den thread_stack der Datenbank gesammelt werden."
 
 #: install/index.php
 msgid "MySQL \"thread_stack\" is %1 kb"
-msgstr ""
+msgstr "Der MySQL \"thread_stack\" ist %1 kb groß"
 
 #: install/index.php
 msgid "The database: '%1' does not exist."
-msgstr ""
+msgstr "Die Datenbank: '%1' existiert nicht."
 
 #: install/index.php
 msgid "Able to create a new database."
-msgstr ""
+msgstr "Kann eine neue Datenbank anlegen."
 
 #: install/index.php
 msgid "user '%1' doesn't have CREATE DATABASE permissions."
-msgstr ""
+msgstr "Benutzer '%1' hat keine CREATE DATABASE Berechtigung."
 
 #: install/index.php
 msgid "the following PHP variables are missing: %1"
@@ -397,7 +408,7 @@ msgstr "Die Datenbank %1 konnte nicht angelegt werden."
 msgid ""
 "We encountered an error when attempting to create the database. Please check"
 " your MySQL server permissions and the database name and try again."
-msgstr ""
+msgstr "Es ist ein Fehler beim Versuch, die Datenbank anzulegen, aufgetreten. Bitte überprüfen Sie Ihre MySQL Server Berechtigungen und den Datenbanknamen und versuchen Sie es erneut."
 
 #: install/index.php
 msgid ""
@@ -407,21 +418,21 @@ msgid ""
 "improvements, target our communications and build the community. If you have"
 " a technical role for this site, be sure to check Keep in Touch to receive "
 "technical updates (a low volume mailing list)."
-msgstr ""
+msgstr "Haben Sie diese Seite auf CiviCRM.org registriert? Falls nicht, helfen Sie uns bitte, das CiviCRM Ökosystem zum stärken, indem Sie sich ein paar Minuten Zeit nehmen und unser <a %1>Registrierungsformular ausfüllen</a>. Die dadurch gesammelten Informationen helfen uns dabei, Verbesserungen nach Wichtigkeit zu ordnen, unsere Kommunikation zu verbessern und eine Community aufzubauen. Wenn Sie für den technischen Teil dieser Seite verantwortlich sind, dann werfen Sie unbedingt einen Blick auf Keep in Touch, um technische Updates zu erhalten (Mailing Liste mit geringem Umfang)"
 
 #: install/index.php
 msgid ""
 "We have integrated KCFinder with CKEditor and TinyMCE. This allows a user to"
 " upload images. All uploaded images are public."
-msgstr ""
+msgstr "We have integrated KCFinder with CKEditor and TinyMCE. This allows a user to upload images. All uploaded images are public."
 
 #: install/index.php
 msgid "CiviCRM Installed"
-msgstr ""
+msgstr "CiviCRM installiert"
 
 #: install/index.php
 msgid "CiviCRM has been successfully installed"
-msgstr ""
+msgstr "CiviCRM wurde erfolgreich installiert"
 
 #: install/index.php
 msgid ""
@@ -429,13 +440,13 @@ msgid ""
 "authenticated users access to public CiviCRM forms and features. We "
 "recommend that you <a %1>review these permissions</a> to ensure that they "
 "are appropriate for your requirements (<a %2>learn more...</a>)"
-msgstr ""
+msgstr "Die Drupal Benutzerrechte wurden automatisch gesetzt - dadurch haben anonyme und angemeldete Benutzer Zugriff auf öffentliche CIviCRM Formulare und Funktionen. Wir empfehlen Ihnen, die <a %1> Benutzerrechte zu überprüfen </a>, um sicherzustellen, dass sie Ihren Anforderungen genügen (<a %2>mehr erfahren...</a>)"
 
 #: install/index.php
 msgid ""
 "Use the <a %1>Configuration Checklist</a> to review and configure settings "
 "for your new site"
-msgstr ""
+msgstr "Benutzen Sie die <a %1>Einstellungs-Checkliste</a>, um Einstellungen für Ihre neue Seite vorzunehmen und zu überprüfen"
 
 #: install/index.php
 msgid ""
@@ -443,11 +454,11 @@ msgid ""
 "and Subscribers access to public CiviCRM forms and features. We recommend "
 "that you <a %1>review these permissions</a> to ensure that they are "
 "appropriate for your requirements (<a %2>learn more...</a>)"
-msgstr ""
+msgstr "Die Wordpress Benutzerrechte wurden automatisch gesetzt - dadurch haben anonyme Benutzer und Abonnenten Zugriff auf öffentliche CIviCRM Formulare und Funktionen. Wir empfehlen Ihnen, die <a %1> Benutzerrechte zu überprüfen </a>, um sicherzustellen, dass sie Ihren Anforderungen genügen (<a %2>mehr erfahren...</a>)"
 
 #: install/index.php
 msgid "<a %1>Refer to the online documentation for more information</a>"
-msgstr ""
+msgstr "<a %1>Verweis auf die Online Dokumentation für weitere Informationen</a>"
 
 #: install/template.html
 msgid "CiviCRM Installer"
@@ -515,7 +526,7 @@ msgstr "Sprache ändern"
 
 #: install/template.html
 msgid "Database Version and Connection Settings"
-msgstr ""
+msgstr "Datenbank Version und Verbindungseinstellungen"
 
 #: install/template.html
 msgid ""
@@ -567,16 +578,16 @@ msgstr "Andere Einstellungen"
 
 #: install/template.html
 msgid "Re-check requirements"
-msgstr ""
+msgstr "Anforderungen überprüfen"
 
 #: install/template.html
 msgid "CiviCRM Database Details"
-msgstr ""
+msgstr "CiviCRM Datenbank Details"
 
 #: install/template.html
 msgid "Drupal Database Details"
-msgstr ""
+msgstr "Drupal Datenbank Details"
 
 #: install/template.html
 msgid "Requirements"
-msgstr ""
+msgstr "Anforderungen"
