po: update po/de_DE/pledge.po (pulled from Transifex.net by CiviCRM l10n maintainer)

--- a/po/de_DE/pledge.po
+++ b/po/de_DE/pledge.po
@@ -19,9 +19,9 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2016-02-08 09:05+0000\n"
-"Last-Translator: Fabian <schuttenberg@systopia.de>\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:09+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: German (http://www.transifex.com/civicrm/civicrm/language/de/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -60,12 +60,12 @@ msgid "Pledge Payment Status"
 msgstr "Zahlungsstatus der Unterstützungszusage"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
-msgid "$%1 - due on %2 (overdue)"
-msgstr "$%1 - fällig am %2 (überfällig)"
+msgid "%1 - due on %2 (overdue)"
+msgstr "%1 - fällig %2 (überfällig)"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
-msgid "$%1 - due on %2"
-msgstr "$%1 - fällig am %2"
+msgid "%1 - due on %2"
+msgstr "%1 - fällig %2"
 
 #: CRM/Pledge/BAO/PledgeBlock.php
 msgid ""
@@ -89,14 +89,6 @@ msgid "Pledge Frequency Interval"
 msgstr "Intervall der regelmässigen Unterstützung"
 
 #: CRM/Pledge/BAO/Query.php
-msgid "Pledge Status %1"
-msgstr "Status der Unterstützungszusage %1"
-
-#: CRM/Pledge/BAO/Query.php
-msgid "Pledge Payment Status %1"
-msgstr "Zahlungsstatus für Unterstützungszusage %1"
-
-#: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test"
 msgstr "Diese Unterstützungszusage ist ein Test"
 
@@ -107,6 +99,10 @@ msgstr "Zuwendungsart - %1"
 #: CRM/Pledge/BAO/Query.php
 msgid "Financial Page - %1"
 msgstr "Zuwendungsseite - %1"
+
+#: CRM/Pledge/BAO/Query.php
+msgid "Contact ID %1 %2"
+msgstr "Kontakt ID %1 %2"
 
 #: CRM/Pledge/BAO/Query.php
 msgid "Pledge is a Test?"
@@ -156,10 +152,6 @@ msgstr "Unterstützungszusage geändert am"
 msgid "Pledge Cancelled Date"
 msgstr "Kündigungsdatum der Unterstützungszusage"
 
-#: CRM/Pledge/DAO/Pledge.php
-msgid "Pledge Honor Contact"
-msgstr "Zusage Ehrenkontakt"
-
 #: CRM/Pledge/DAO/Pledge.php CRM/Pledge/DAO/PledgeBlock.php
 msgid "Maximum Number of Reminders"
 msgstr "Maximale Anzahl der Erinnerungen"
@@ -198,12 +190,12 @@ msgid "Reminders Sent"
 msgstr "Erinnerung gesandt"
 
 #: CRM/Pledge/Form/Payment.php
+msgid "Edit Scheduled Pledge Payment"
+msgstr "Terminierte Zahlung von Unterstützungszusage bearbeiten"
+
+#: CRM/Pledge/Form/Payment.php
 msgid "Pledge Payment Schedule has been updated."
 msgstr "Der Unterstützungszusagen-Zahlungsplan wurde aktualisiert."
-
-#: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/Pledge.tpl
-msgid "Pledge by"
-msgstr "Unterstützungszusage von"
 
 #: CRM/Pledge/Form/Pledge.php templates/CRM/Pledge/Form/PledgeView.tpl
 #: xml/templates/message_templates/pledge_acknowledge_html.tpl
@@ -310,6 +302,10 @@ msgid "Pledger Name or Email"
 msgstr "Name oder Email"
 
 #: CRM/Pledge/Form/Search.php
+msgid "Pledger Name"
+msgstr "Name des Unterstützers"
+
+#: CRM/Pledge/Form/Search.php
 msgid "Find Pledges"
 msgstr "Unterstützungszusagen finden"
 
@@ -318,12 +314,10 @@ msgid "Delete Pledges"
 msgstr "Unterstützungszusagen löschen"
 
 #: CRM/Pledge/Form/Task/Delete.php
-msgid "Deleted Pledge(s): %1"
-msgstr "Gelöschte Unterstützung(en): %1"
-
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "Total Selected Pledge(s): %1"
-msgstr "Summe der ausgewählten Unterstützung(en): %1"
+msgid "%count pledge deleted."
+msgid_plural "%count pledges deleted."
+msgstr[0] "%count Unterstützungszusage gelöscht."
+msgstr[1] "%count Unterstützungszusagen gelöscht."
 
 #: CRM/Pledge/Form/Task/Print.php
 msgid "Print Pledge List"
@@ -332,6 +326,30 @@ msgstr "Unterstützungs-Liste ausdrucken"
 #: CRM/Pledge/Info.php
 msgid "CiviCRM Pledge Engine"
 msgstr "CiviCRM Unterstützungszusagen-Funktion"
+
+#: CRM/Pledge/Info.php
+msgid "access CiviPledge"
+msgstr "Zugriff auf CiviPledge"
+
+#: CRM/Pledge/Info.php
+msgid "View pledges"
+msgstr "Unterstützungen ansehen"
+
+#: CRM/Pledge/Info.php
+msgid "edit pledges"
+msgstr "Unterstützungen bearbeiten"
+
+#: CRM/Pledge/Info.php
+msgid "Create and update pledges"
+msgstr "Unterstützungen erstellen und aktualisieren"
+
+#: CRM/Pledge/Info.php
+msgid "delete in CiviPledge"
+msgstr "In CiviPledge löschen"
+
+#: CRM/Pledge/Info.php
+msgid "Delete pledges"
+msgstr "Unterstützungen löschen"
 
 #: CRM/Pledge/Info.php
 msgid "Your Pledge(s)"
@@ -349,11 +367,11 @@ msgid ""
 "pledge payments."
 msgstr "Die Stornierung dieser Unterstützungszusage wird ebenso alle geplanten (und noch nicht ausgeführten) Zahlungen aufheben."
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/PledgeView.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "View Pledge"
 msgstr "Unterstützungszusagen zeigen"
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/Pledge.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "Edit Pledge"
 msgstr "Unterstützungszusage bearbeiten"
 
@@ -361,7 +379,7 @@ msgstr "Unterstützungszusage bearbeiten"
 msgid "Cancel Pledge"
 msgstr "Unterstützungszusage storniert"
 
-#: CRM/Pledge/Selector/Search.php templates/CRM/Pledge/Form/Pledge.tpl
+#: CRM/Pledge/Selector/Search.php
 msgid "Delete Pledge"
 msgstr "Unterstützungzusage gelöscht"
 
@@ -382,20 +400,12 @@ msgid "Pledge Search"
 msgstr "Unterstützungzusage suchen"
 
 #: CRM/Pledge/Task.php
-msgid "Print Pledges"
-msgstr "Unterstützungszusagen drucken"
-
-#: CRM/Pledge/Task.php
 msgid "Export Pledges"
 msgstr "Unterstützungszusagen exportieren"
 
 #: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Edit Scheduled Pledge Payment"
-msgstr "Terminierte Zahlung von Unterstützungszusage bearbeiten"
-
-#: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Scheduled Date for Pledge payment."
-msgstr "Geplante Zahlungsdaten für Unterstützungszusagen."
+msgid "Adjust scheduled amount"
+msgstr "Passen Sie den vorgesehenen Betrag an"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -404,10 +414,6 @@ msgid ""
 " to be sent when this pledge is recorded, click Cancel and then click Edit "
 "from the Summary tab to add an email address before recording the pledge."
 msgstr "Es ist nicht möglich, eine Bestätigung für diese Unterstützungszusage zu senden, weil keine E-Mail-Adresse für diesen Kontakt vorhanden ist. Wenn eine Empfangsbestätigung versandt werden soll, wenn diese Unterstützungszusage eingetragen wird, klicken Sie \"Abbrechen\" und dann \"Bearbeiten\", um eine E-Mailadresse einzutragen, bevor die Unterstützungszusage eingetragen wird. "
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid "New Pledge"
-msgstr "Neue Unterstützungszusage"
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
@@ -424,6 +430,10 @@ msgid ""
 msgstr "Stattdessen sollte die Unterstützungszusage storniert werden, um alte Zahlungen wieterhin nachverfolgen zu können und den Verlust von Zahlungsdaten zu vermeiden. Um den Unterstützungszusagenstatus auf storniert zu setzen und auch alle bisher nicht getätigten Zahlungen zu stornieren, klicken Sie hier zunächst \"Abbrechen\". Dann klicken Sie auf den \"Weiter ...\"-Link auf der Liste der Unterstützungszusagen und wählen Sie \"Abbrechen\"."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
+msgid "Pledge by"
+msgstr "Unterstützungszusage von"
+
+#: templates/CRM/Pledge/Form/Pledge.tpl
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid ""
 " Pledge total has changed due to payment adjustments. Original pledge amount"
@@ -431,6 +441,7 @@ msgid ""
 msgstr " Summe der Unterstützungszusage wurde geändert aufgrund der gerade durchgeführten Zahlungsanpassungen. Ursprüngliche Unterstützungszusage war %1."
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
+#: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "installments of"
 msgstr "Ratenzahlungen von"
 
@@ -453,10 +464,6 @@ msgstr "Datum der ersten Zahlung im Rahmen der Unterstützungszusage."
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Automatically email an acknowledgment of this pledge to %1?"
 msgstr "Automatischer Versand einer Empfangsbestätigung bezüglich der Unterstützungszusage an %1?"
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid "Automatically email an acknowledgment of this pledge to "
-msgstr "Automatischer Versand einer Empfangsbestätigung bezüglich der Unterstützungszusage an "
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid "Date when an acknowledgment of the pledge was sent."
@@ -482,20 +489,12 @@ msgstr "Unterstützungszusagen sind \"ausstehend\", bis die erste Zahlung eingeg
 
 #: templates/CRM/Pledge/Form/Pledge.tpl
 msgid ""
-"Click OK to save this Pledge record AND send an acknowledgment to %1 now"
+"Click OK to save this Pledge record AND send an acknowledgment to %1 now."
 msgstr "Klick OK um die Unterstützungszusage abzuspeichern UND sofort eine Bestätigung an %1 zu schicken."
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Pledge By"
 msgstr "Unterstützungszusage durch"
-
-#: templates/CRM/Pledge/Form/PledgeView.tpl
-msgid " installments of "
-msgstr " Raten von "
-
-#: templates/CRM/Pledge/Form/PledgeView.tpl
-msgid " every "
-msgstr "alle "
 
 #: templates/CRM/Pledge/Form/PledgeView.tpl
 msgid "Payment Start"
@@ -522,10 +521,6 @@ msgid "Payments Ended Date"
 msgstr "Zahlungen endeten am"
 
 #: templates/CRM/Pledge/Form/Search/EmptyResults.tpl
-msgid "No matching pledge results found."
-msgstr "Keine passenden Zusagen gefunden. "
-
-#: templates/CRM/Pledge/Form/Search/EmptyResults.tpl
 msgid ""
 "If you are searching by pledger name, check your spelling or use fewer "
 "letters."
@@ -538,8 +533,16 @@ msgid ""
 msgstr "Wenn Sie innerhalb eines bestimmten Zeitraums oder Bereichs von Beträgen suchen , versuchen Sie einen breiteren Suchbereich."
 
 #: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Click %1 to view pledge payments."
-msgstr "Klicken Sie %1, um zugesagte Unterstützungszahlungen zu sehen."
+msgid "Click arrow to view pledge payments."
+msgstr "Klicken Sie den Pfeil, um Unterstützungszahlungen zu sehen."
+
+#: templates/CRM/Pledge/Form/Selector.tpl
+msgid "Show payments"
+msgstr "Zeige Zahlungen"
+
+#: templates/CRM/Pledge/Form/Selector.tpl
+msgid "Hide payments"
+msgstr "Verberge Zahlungen"
 
 #: templates/CRM/Pledge/Form/Selector.tpl
 msgid "Find more pledges"
@@ -559,10 +562,6 @@ msgstr "zu zahlen"
 #: templates/CRM/Pledge/Form/Task/Print.tpl
 msgid "Begining Date"
 msgstr "Anfangsdatum"
-
-#: templates/CRM/Pledge/Form/Task/SearchTaskHookSample.tpl
-msgid "Pledge made"
-msgstr "Unterstützungszusage"
 
 #: templates/CRM/Pledge/Form/Task.tpl
 msgid "Number of selected pledges: %1"
@@ -613,20 +612,12 @@ msgid "Amount Paid"
 msgstr "Bezahlter Betrag"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>View Payment</a>"
-msgstr "<a href=\"%1\">Zahlung betrachten</a>."
+msgid "Credit Card Payment"
+msgstr "Kreditkartenzahlung"
 
 #: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Record Payment (Check, Cash, EFT ...)</a>"
-msgstr "<a href='%1'>Zahlung eintragen (Scheck, Barzahlung, ...)</a>"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Submit Credit Card Payment</a>"
-msgstr "<a href='%1'>Kreditkarten Zahlung übermitteln</a>"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "<a href='%1'>Edit Scheduled Payment</a>"
-msgstr "<a href='%1'>Geplante Zahlung bearbeiten</a>"
+msgid "Edit Scheduled Payment"
+msgstr "Terminierte Zahlung bearbeiten"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid "Payment Reminders"
@@ -646,9 +637,10 @@ msgstr "Um Erinnerungen zu schicken:"
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
-"Your site administrator must configure the provided script which updates "
-"pledge payment statuses and sends the reminders (UpdatePledgeRecord.php)."
-msgstr "Ihr Site Administrator muss das bereitgestellt Skript einrichten, das bei Zahlungen zu Unterstützungszusagen den Status aktualisiert und die Erinnerungen auslöst (UpdatePledgeRecord.php)."
+"Your site administrator must configure the scheduled job (Administer > "
+"System Settings > Scheduled Jobs) which updates pledge payment statuses and "
+"sends the reminders."
+msgstr "Ihr Administrator muss die geplante Aufgabe einrichten (Administrator > Einstellungen > Geplante Aufgaben), die bei Zahlungen zu Unterstützungszusagen den Status aktualisiert und die Erinnerungen auslöst."
 
 #: templates/CRM/Pledge/Page/Tab.hlp
 msgid ""
@@ -668,13 +660,17 @@ msgstr "Unterstützungszusagen erhalten von %1 seit Beginn."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid ""
-"Click <a href='%1'>Add Pledge</a> to record a new pledge received from this "
+"Click <a %1>Add Pledge</a> to record a new pledge received from this "
 "contact."
-msgstr "Klicken Sie <a href='%1'>Unterstützungszusage hinzufügen</a> um eine neue Zuwendung dieses Kontakts zu speichern."
+msgstr "Klicken Sie <a %1>Unterstützungszusage hinzufügen</a> um eine neue Zuwendung dieses Kontakts zu speichern."
 
 #: templates/CRM/Pledge/Page/Tab.tpl
 msgid "No pledges have been recorded from this contact."
 msgstr "Keine Unterstützungszusagen von diesem Kontakt eingetragen."
+
+#: templates/CRM/Pledge/Page/Tab.tpl
+msgid "Contributions made in honor of %1"
+msgstr ""
 
 #: templates/CRM/Pledge/Page/UserDashboard.tpl
 msgid "Make Payment"
@@ -800,94 +796,38 @@ msgstr "Vielen Dank für Ihre großzügige Unterstützung. "
 msgid "Pledge Payment Reminder"
 msgstr "Erinnerung Zahlungszusage"
 
-#: CRM/Pledge/BAO/PledgeBlock.php
-msgid "%1 - due on %2 (overdue)"
-msgstr "%1 - fällig %2 (überfällig)"
-
-#: CRM/Pledge/BAO/PledgeBlock.php
-msgid "%1 - due on %2"
-msgstr "%1 - fällig %2"
-
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "Deleted Pledge(s): %1 (Total Selected: %2) "
-msgstr "Gelöschte Unterstützung(en): %1 (von ausgewählten: %2)"
-
-#: templates/CRM/Pledge/Form/Payment.tpl
-msgid "Adjust scheduled amount"
-msgstr "Passen Sie den vorgesehenen Betrag an"
-
-#: templates/CRM/Pledge/Form/Pledge.tpl
-msgid ""
-"Click OK to save this Pledge record AND send an acknowledgment to %1 now."
-msgstr "Klick OK um die Unterstützungszusage abzuspeichern UND sofort eine Bestätigung an %1 zu schicken."
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Click arrow to view pledge payments."
-msgstr "Klicken Sie den Pfeil, um Unterstützungszahlungen zu sehen."
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Show payments"
-msgstr "Zeige Zahlungen"
-
-#: templates/CRM/Pledge/Form/Selector.tpl
-msgid "Hide payments"
-msgstr "Verberge Zahlungen"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "Credit Card Payment"
-msgstr "Kreditkartenzahlung"
-
-#: templates/CRM/Pledge/Page/Payment.tpl
-msgid "Edit Scheduled Payment"
-msgstr "Terminierte Zahlung bearbeiten"
-
-#: templates/CRM/Pledge/Page/Tab.hlp
-msgid ""
-"Your site administrator must configure the scheduled job (Administer > "
-"System Settings > Scheduled Jobs) which updates pledge payment statuses and "
-"sends the reminders."
-msgstr "Ihr Administrator muss die geplante Aufgabe einrichten (Administrator > Einstellungen > Geplante Aufgaben), die bei Zahlungen zu Unterstützungszusagen den Status aktualisiert und die Erinnerungen auslöst."
-
-#: templates/CRM/Pledge/Page/Tab.tpl
-msgid ""
-"Click <a %1>Add Pledge</a> to record a new pledge received from this "
-"contact."
-msgstr "Klicken Sie <a %1>Unterstützungszusage hinzufügen</a> um eine neue Zuwendung dieses Kontakts zu speichern."
+#: CRM/Pledge/BAO/Query.php
+msgid "Pledge Acknowledgement Sent"
+msgstr ""
 
 #: CRM/Pledge/BAO/Query.php
-msgid "Contact ID %1 %2"
-msgstr "Kontakt ID %1 %2"
+msgid "Pledge Acknowledgement  Not Sent"
+msgstr ""
 
-#: CRM/Pledge/Form/Search.php
-msgid "Pledger Name"
-msgstr "Name des Unterstützers"
+#: CRM/Pledge/BAO/Query.php
+msgid "Acknowledgement sent?"
+msgstr ""
 
-#: CRM/Pledge/Form/Task/Delete.php
-msgid "%count pledge deleted."
-msgid_plural "%count pledges deleted."
-msgstr[0] "%count Unterstützungszusage gelöscht."
-msgstr[1] "%count Unterstützungszusagen gelöscht."
+#: CRM/Pledge/BAO/Query.php
+msgid "Please enter a number"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "access CiviPledge"
-msgstr "Zugriff auf CiviPledge"
+#: CRM/Pledge/BAO/Query.php
+msgid "Please enter number."
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "View pledges"
-msgstr "Unterstützungen ansehen"
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Pledge Block ID"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "edit pledges"
-msgstr "Unterstützungen bearbeiten"
+#: CRM/Pledge/DAO/PledgeBlock.php
+msgid "Expose Frequency Interval?"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "Create and update pledges"
-msgstr "Unterstützungen erstellen und aktualisieren"
+#: CRM/Pledge/Task.php
+msgid "Export pledges"
+msgstr ""
 
-#: CRM/Pledge/Info.php
-msgid "delete in CiviPledge"
-msgstr "In CiviPledge löschen"
-
-#: CRM/Pledge/Info.php
-msgid "Delete pledges"
-msgstr "Unterstützungen löschen"
+#: templates/CRM/Pledge/Form/Task/Print.tpl
+msgid "Beginning Date"
+msgstr ""
