--- a/po/el_GR/queue.po
+++ b/po/el_GR/queue.po
@@ -1,4 +1,4 @@
-# Copyright CiviCRM LLC (c) 2004-2014
+# Copyright CiviCRM LLC (c) 2004-2015
 # This file is distributed under the same license as the CiviCRM package.
 # If you contribute heavily to a translation and deem your work copyrightable,
 # make sure you license it to CiviCRM LLC under Academic Free License 3.0.
@@ -8,10 +8,10 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2014-08-27 13:25-0400\n"
-"PO-Revision-Date: 2015-02-18 09:51+0000\n"
-"Last-Translator: Vangelis P. <v.pantazis@ixiam.com>\n"
-"Language-Team: Greek (http://www.transifex.com/projects/p/civicrm/language/el/)\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:11+0000\n"
+"Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
+"Language-Team: Greek (http://www.transifex.com/civicrm/civicrm/language/el/)\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -37,3 +37,7 @@ msgstr "Δεδομένα αντικειμένων στην ουρά"
 #: CRM/Queue/Runner.php
 msgid "Queue Runner"
 msgstr "Εκτέλεση Ουράς"
+
+#: CRM/Queue/DAO/QueueItem.php
+msgid "Queue ID"
+msgstr ""
