--- a/po/en_AU/menu.po
+++ b/po/en_AU/menu.po
@@ -7,8 +7,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: CiviCRM\n"
-"POT-Creation-Date: 2015-12-09 21:23-0500\n"
-"PO-Revision-Date: 2015-12-10 02:30+0000\n"
+"POT-Creation-Date: 2016-05-09 13:33-0400\n"
+"PO-Revision-Date: 2016-05-09 17:10+0000\n"
 "Last-Translator: Mathieu Lutfy <mathieu@bidon.ca>\n"
 "Language-Team: English (Australia) (http://www.transifex.com/civicrm/civicrm/language/en_AU/)\n"
 "MIME-Version: 1.0\n"
@@ -126,8 +126,8 @@ msgid "Case Activity"
 msgstr "Case Activity"
 
 msgctxt "menu"
-msgid "Case Report"
-msgstr "Case Report"
+msgid "Case Activity Audit"
+msgstr ""
 
 msgctxt "menu"
 msgid "Case Custom Set"
@@ -146,8 +146,8 @@ msgid "Assign to Another Client"
 msgstr "Assign to Another Client"
 
 msgctxt "menu"
-msgid "Build Activity To Case"
-msgstr "Build Activity To Case"
+msgid "File on Case"
+msgstr ""
 
 msgctxt "menu"
 msgid "Case Details"
@@ -170,10 +170,6 @@ msgstr "Case Statuses"
 
 msgctxt "menu"
 msgid "Encounter Mediums"
-msgstr ""
-
-msgctxt "menu"
-msgid "Change Activity Status"
 msgstr ""
 
 msgctxt "menu"
@@ -249,6 +245,10 @@ msgctxt "menu"
 msgid "Financial Types"
 msgstr ""
 
+msgctxt "menu"
+msgid "New Payment"
+msgstr ""
+
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Financial Accounts"
@@ -266,9 +266,15 @@ msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Soft Credit Types"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Contributions"
 msgstr "Contributions"
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Recurring Contributions"
 msgstr ""
@@ -318,6 +324,23 @@ msgstr ""
 
 msgctxt "menu"
 msgid "Accounting Batch Export"
+msgstr ""
+
+msgctxt "menu"
+msgid "View Payment"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "CiviContribute Component Settings"
+msgstr ""
+
+msgctxt "menu"
+msgid "PDF Invoice"
+msgstr ""
+
+msgctxt "menu"
+msgid "Email Invoice"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
@@ -472,6 +495,11 @@ msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Date Preferences"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Navigation Menu"
 msgstr ""
 
@@ -505,10 +533,6 @@ msgctxt "menu"
 msgid "Schedule Reminders"
 msgstr ""
 
-msgctxt "menu"
-msgid "This should never be seen"
-msgstr "This should never be seen"
-
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "Preferred Communication Methods"
@@ -526,6 +550,11 @@ msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Communication Style Options"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Email Greeting Formats"
 msgstr ""
 
@@ -539,8 +568,9 @@ msgctxt "menu"
 msgid "Addressee Formats"
 msgstr ""
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Location"
+msgid "Languages, Currency, Locations"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
@@ -692,10 +722,6 @@ msgid "Administer CiviCRM"
 msgstr "Administer CiviCRM"
 
 msgctxt "menu"
-msgid "Option Values"
-msgstr "Option Values"
-
-msgctxt "menu"
 msgid "Price Sets"
 msgstr "Price Sets"
 
@@ -763,10 +789,6 @@ msgstr "Search Builder"
 msgctxt "menu"
 msgid "Custom Searches"
 msgstr "Custom Searches"
-
-msgctxt "menu"
-msgid "Simple Search"
-msgstr "Simple Search"
 
 msgctxt "menu"
 msgid "New Contact"
@@ -858,6 +880,10 @@ msgid "CiviCRM Blog"
 msgstr ""
 
 msgctxt "menu"
+msgid "CiviCRM Getting Started"
+msgstr ""
+
+msgctxt "menu"
 msgid "Case Dashlet"
 msgstr ""
 
@@ -912,6 +938,10 @@ msgid "Import Activities"
 msgstr ""
 
 msgctxt "menu"
+msgid "Import Multi-value Custom Data"
+msgstr ""
+
+msgctxt "menu"
 msgid "Upgrade CiviCRM"
 msgstr "Upgrade CiviCRM"
 
@@ -948,12 +978,16 @@ msgid "Browse Uploaded files"
 msgstr "Browse Uploaded files"
 
 msgctxt "menu"
-msgid "Delete file"
+msgid "Delete File"
 msgstr ""
 
 msgctxt "menu"
 msgid "Log out"
 msgstr "Log out"
+
+msgctxt "menu"
+msgid "CiviCRM API"
+msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
@@ -966,6 +1000,10 @@ msgstr ""
 
 msgctxt "menu"
 msgid "ProfileEditor"
+msgstr ""
+
+msgctxt "menu"
+msgid "Confirm dates"
 msgstr ""
 
 msgctxt "menu"
@@ -1063,6 +1101,10 @@ msgid "Event Online Registration"
 msgstr ""
 
 msgctxt "menu"
+msgid "Repeat Event"
+msgstr ""
+
+msgctxt "menu"
 msgid "Conference Slots"
 msgstr ""
 
@@ -1095,6 +1137,10 @@ msgstr ""
 
 msgctxt "menu"
 msgid "View Cart"
+msgstr ""
+
+msgctxt "menu"
+msgid "Change Registration Selections"
 msgstr ""
 
 msgctxt "menu"
@@ -1150,8 +1196,8 @@ msgid "Resubscribe"
 msgstr "Resubscribe"
 
 msgctxt "menu"
-msgid "Optout"
-msgstr "Optout"
+msgid "Opt-out"
+msgstr ""
 
 msgctxt "menu"
 msgid "Confirm"
@@ -1285,6 +1331,11 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "CiviCRM News"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Getting Started"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
@@ -1424,6 +1475,16 @@ msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "New A/B Test"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Manage A/B Tests"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Reports"
 msgstr ""
 
@@ -1529,11 +1590,6 @@ msgstr "Localization"
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Languages, Currency, Locations"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
 msgid "Preferred Language Options"
 msgstr ""
 
@@ -1550,6 +1606,11 @@ msgstr ""
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
 msgid "System Settings"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Connections"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
@@ -1619,6 +1680,11 @@ msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Grant Status"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "CiviMember"
 msgstr ""
 
@@ -1629,7 +1695,12 @@ msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Help"
+msgid "Support"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Get started"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
@@ -1639,17 +1710,42 @@ msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Community Forums"
+msgid "Ask a question"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Participate"
+msgid "Get expert help"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "About"
+msgid "About CiviCRM"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Register your site"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Join CiviCRM"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "API Explorer"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
+msgid "Developer Docs"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
@@ -1877,6 +1973,11 @@ msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
+msgid "Provides information about the status of recurring contributions"
+msgstr ""
+
+#: xml/templates/civicrm_navigation.tpl
+msgctxt "menu"
 msgid "Membership Summary"
 msgstr ""
 
@@ -2046,144 +2147,69 @@ msgid ""
 "Detailed report for canvassing, phone-banking, walk lists or other surveys."
 msgstr ""
 
+#: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Case Activity Audit"
+msgid "Payment Methods"
 msgstr ""
 
 msgctxt "menu"
-msgid "New Payment"
+msgid "Configure CKEditor"
+msgstr ""
+
+msgctxt "menu"
+msgid "Batch Merge Duplicate Contacts"
+msgstr ""
+
+msgctxt "menu"
+msgid "Insert CiviCRM Content"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Update"
+msgstr ""
+
+msgctxt "menu"
+msgid "Self-service Registration Transfer"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Soft Credit Types"
-msgstr ""
-
-msgctxt "menu"
-msgid "View Payment"
+msgid "System Status"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Communication Style Options"
-msgstr ""
-
-msgctxt "menu"
-msgid "Import Multi-value Custom Data"
-msgstr ""
-
-msgctxt "menu"
-msgid "Change Registration Selections"
+msgid "Components"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Grant Status"
+msgid "Extensions"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer"
+msgid "Activity Details"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "API Explorer"
+msgid "Activity Summary"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Developer Docs"
-msgstr ""
-
-msgctxt "menu"
-msgid "File on Case"
+msgid "Shows activity statistics by type / date"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "CiviContribute Component Settings"
-msgstr ""
-
-msgctxt "menu"
-msgid "PDF Invoice"
-msgstr ""
-
-msgctxt "menu"
-msgid "Email Invoice"
+msgid "Pledge Detail"
 msgstr ""
 
 #: xml/templates/civicrm_navigation.tpl
 msgctxt "menu"
-msgid "Date Preferences"
-msgstr ""
-
-msgctxt "menu"
-msgid "Delete File"
-msgstr ""
-
-msgctxt "menu"
-msgid "CiviCRM API"
-msgstr ""
-
-msgctxt "menu"
-msgid "Confirm dates"
-msgstr ""
-
-msgctxt "menu"
-msgid "Repeat Event"
-msgstr ""
-
-msgctxt "menu"
-msgid "Opt-out"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "New A/B Test"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Manage A/B Tests"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Support"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get started"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Ask a question"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Get expert help"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "About CiviCRM"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Register your site"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Join CiviCRM"
-msgstr ""
-
-#: xml/templates/civicrm_navigation.tpl
-msgctxt "menu"
-msgid "Provides information about the status of recurring contributions"
+msgid ""
+"List of pledges including amount pledged, pledge status, next payment date, "
+"balance due, total amount paid etc."
 msgstr ""
